z-index fix

--- a/src/css/mob-menu.css
+++ b/src/css/mob-menu.css
@@ -19,7 +19,7 @@
   position: fixed;
   width: 100%;
   height: 100%;
-  z-index: 1000;
+  z-index: 99;
   top: 0;
   left: 0;
   overflow: auto;
